# mdns

./: .gitignore  CMakeLists.txt  main.c  mdns.c  mdns.h
example/: CMakeLists.txt
include/mdns/: mdns.h
src/: CMakeLists.txt  mdns.c
tests/: CMakeLists.txt  main.c
